2004-09-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/wish.1: Added note that the -use option is linked to the
	frame's -container option to help with [Bug 1024364]

2004-09-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::Create): use label
	instead of button for "File of type", as it properly handles
	-state disabled now.

2004-09-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Set TK_LIBRARY when execing Tk apps (test, 
	runtest, rundemo).

2004-09-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* macosx/tkMacOSXMenus.c (GenerateEditEvent): 
	* macosx/tkMacOSXMenu.c (MenuSelectEvent): 
	* win/tkWinMenu.c (MenuSelectEvent): Make sure everywhere that
	needs to NULL-out the user_data field does actually do so. (Code
	that uses bzero() or memset() for the task just needs to be
	rebuilt to work.) [Bug 1021812]

2004-09-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/bind.test (bind-22.163): Fix inadvertent minor breakage
	from TIP#165. [Bug 1019085]

	* doc/toplevel.n, doc/loadTk.n: More spelling/abbreviation fixes
	from Mikhail Kolesnitchenko.

2004-08-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#165 IMPLEMENTATION

	* generic/tk.h (XVirtualEvent): Added user_data field to
	structure.
	* generic/tkBind.c (ExpandPercents, HandleEventGenerate): 
	* generic/tkEvent.c (Tk_HandleEvent): Handle putting data into the
	user_data field, passing it to scripts as %d substitution, and
	releasing the field's contents once the event has been processed.
	* doc/bind.n, doc/event.n, tests/bind.test: Docs + tests.

2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/text.tcl (::tk::TextTranspose): Ensure that Transpose is
	an atomic op to undo.

2004-08-25  Don Porter  <dgp@users.sourceforge.net>

	* macosx/tkMacOSXWm.c:	Made use of Tcl_WrongNumArgs in a few
	* win/tkWinMenu.c:	appropriate spots.

2004-08-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
